--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/sanctum": "^3.3",
+        "laravel/tinker": "^2.8",
+        "rony-novaes/code_mongo_db": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -61,6 +62,9 @@
             "php-http/discovery": true
         }
     },
+    "repositories": [
+        {"type": "git", "url": "https://github.com/rony-novaes/code_mongo_db.git"}
+    ],
     "minimum-stability": "stable",
     "prefer-stable": true
 }
